# The-Book-of-Andy-frontend

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  github-issues.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/bookmarks/: README.md  auth.py  router.py  schemas.py  service.py
backend/app/episodes/: README.md  router.py  schemas.py  service.py
backend/app/ingestion/: README.md  __init__.py  chunker.py  config.py  embeddings.py  ingest_transcript.py  parser.py  pipeline.py  storage.py
backend/app/search/: README.md  router.py  schemas.py  service.py
backend/migrations/: 001_keyword_search_function.sql  002_semantic_search_function.sql  003_create_bookmark_atomic_function.sql  004_add_fk_indexes.sql  README.md
backend/tests/bookmarks/: test_bookmarks.py
backend/tests/episodes/: test_transcript.py
backend/tests/ingestion/: 932._Real_Talk__The_Illusion_of_Permission__Nobody_._fd90f097cb81_.txt  test-ingest_transcript.txt  test_parser.py  test_parser.txt
backend/tests/search/: test_keyword_search.py  test_semantic_search.py
frontend/: README.md
frontend/src/: App.css  App.tsx  config.ts
frontend/src/components/: BookmarkCard.css  BookmarkCard.tsx  Header.css  Header.tsx  Pagination.css  Pagination.tsx  README.md  ScrollToTop.css  ScrollToTop.tsx  SearchBar.css  SearchBar.tsx  SearchResultCard.css  SearchResultCard.tsx
frontend/src/hooks/: README.md  useBookmarks.ts  useSearch.ts
frontend/src/pages/: AuthCallback.tsx  HomePage.css  (+6 more)
pipeline/: README.md  requirements.txt
pipeline/diarization/: diarize.py  format_output.py  ingest.py  run_pipeline.sh  transcribe.py
pipeline/scheduler/: lambda_client.py
supabase/: README.md
supabase/migrations/: 20260301_002_create_initial_schema.sql  20260301_003_create_storage_bucket.sql
(+4 files in other folders)
