[tool.poetry]
name = "podcast-transcript-api"
version = "0.1.0"
description = "FastAPI backend for Podcast Transcript Search App"
authors = ["Developer"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = ">=0.135.1,<0.136.0"
uvicorn = ">=0.41.0,<0.42.0"
python-dotenv = ">=1.2.2,<2.0.0"
supabase = ">=2.13.0,<3.0.0"
openai = ">=1.59.0,<2.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
